--- a/package.json
+++ b/package.json
@@ -18,26 +18,35 @@
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
     "expo": "~42.0.1",
-    "expo-asset": "~8.3.2",
-    "expo-constants": "~11.0.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-asset": "~8.3.3",
+    "expo-constants": "^11.0.2",
     "expo-font": "~9.2.1",
     "expo-linking": "~2.3.1",
-    "expo-splash-screen": "~0.11.2",
+    "expo-screen-orientation": "~3.2.1",
+    "expo-splash-screen": "^0.11.4",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.15.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-restart": "0.0.22",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-svg": "12.1.1",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-web": "^0.17.1",
+    "victory-native": "^35.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.15.5",
     "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@types/react-native": "^0.63.53",
+    "@types/react-native-svg-charts": "^5.0.9",
     "jest-expo": "~41.0.0-beta.0",
     "typescript": "~4.0.0"
   },
